Adding docker compose with postgre containers + init testing repository + adding .env variables

--- a/.env
+++ b/.env
@@ -1,3 +1,14 @@
 PORT=:5050
-DATABASE_URL=postgres://postgres:postgres@localhost:54321/postgres?sslmode=disable
 MAX_LIMIT=50
+
+POSTGRES_PRODUCTION_USER=postgres
+POSTGRES_PRODUCTION_PASSWORD=postgres
+POSTGRES_PRODUCTION_DB=postgres
+POSTGRES_PRODUCTION_PORT=54321
+DATABASE_PRODUCTION_URL=postgres://postgres:postgres@localhost:54321/postgres?sslmode=disable
+
+POSTGRES_TEST_USER=postgres
+POSTGRES_TEST_PASSWORD=postgres
+POSTGRES_TEST_DB=postgres
+POSTGRES_TEST_PORT=54322
+DATABASE_TEST_URL=postgres://postgres:postgres@localhost:54322/postgres?sslmode=disable
