--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ POSTGRES_PRODUCTION_USER=postgres
 POSTGRES_PRODUCTION_PASSWORD=postgres
 POSTGRES_PRODUCTION_DB=postgres
 POSTGRES_PRODUCTION_PORT=54321
-DATABASE_PRODUCTION_URL=postgres://postgres:postgres@localhost:54321/postgres?sslmode=disable
+DATABASE_PRODUCTION_URL=postgres://postgres:postgres@db-production/postgres?sslmode=disable
 
 POSTGRES_TEST_USER=postgres
 POSTGRES_TEST_PASSWORD=postgres
